--- a/xqoo-cloud-code-generator/src/main/resources/vm/microServiceTemplate/src/main/resource/bootstrap.yml.vm
+++ b/xqoo-cloud-code-generator/src/main/resources/vm/microServiceTemplate/src/main/resource/bootstrap.yml.vm
@@ -30,10 +30,10 @@ spring:
         shared-configs:
           - data-id: public-mysql-config.yml # 配置文件名-Data Id
             group: ${nacos.public.public-config-group} # 分组名
-            efresh: false   # 是否动态刷新，默认为false
+            refresh: false   # 是否动态刷新，默认为false
           - data-id: public-redis-config.yml
             group: ${nacos.public.public-config-group}
-            efresh: false
+            refresh: false
           - data-id: module-share-config.yml
             group: ${nacos.public.public-config-group}
             refresh: true
