-新增文件上传模块，文件对象存储服务器阿里云和腾讯云参数 -升级nacos版本至1.4.2，官方修复了下1.3.2数据库连接断开后不会重连导致nacos不可用要重启的问题

--- a/xqoo-cloud-code-generator/src/main/resources/vm/java/entity.java.vm
+++ b/xqoo-cloud-code-generator/src/main/resources/vm/java/entity.java.vm
@@ -5,6 +5,8 @@ import com.baomidou.mybatisplus.extension.activerecord.Model;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import cn.hutool.core.bean.BeanUtil;
+import org.apache.commons.lang3.builder.EqualsBuilder;
+import org.apache.commons.lang3.builder.HashCodeBuilder;
 import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.commons.lang3.builder.ToStringStyle;
 import java.util.Map;
@@ -78,32 +80,23 @@ public class ${className}Entity extends Model<${className}Entity> {
 
     @Override
     public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
+        if (this == o) { return true };
+        if (o == null || getClass() != o.getClass()) { return false };
         ${className}Entity that = (${className}Entity) o;
-        return
+        return new EqualsBuilder()
 #set($ArrLength=$columns.size())
 #foreach($column in $columns)
-#if($foreach.index < $ArrLength - 1)
-            Objects.equals(${column.javaFieldName}, that.${column.javaFieldName}) &&
+                .append(${column.javaFieldName}, that.${column.javaFieldName})
 #end
-#if($foreach.index >= $ArrLength - 1)
-            Objects.equals(${column.javaFieldName}, that.${column.javaFieldName});
-#end
-#end
+            .isEquals();
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(
+        return new HashCodeBuilder(17, 37)
 #foreach($column in $columns)
-#if($foreach.index < $ArrLength - 1)
-                    ${column.javaFieldName},
+                .append(${column.javaFieldName})
 #end
-#if($foreach.index >= $ArrLength - 1)
-                    ${column.javaFieldName}
-#end
-#end
-                );
+                .toHashCode();
     }
 }
