--- a/xqoo-cloud-code-generator/src/main/resources/vm/java/controller.java.vm
+++ b/xqoo-cloud-code-generator/src/main/resources/vm/java/controller.java.vm
@@ -2,6 +2,7 @@ package ${packageName}.controller;
 
 import com.xqoo.common.page.PageRequestBean;
 import com.xqoo.common.page.PageResponseBean;
+import com.xqoo.common.core.utils.StringUtils;
 import com.xqoo.feign.enums.operlog.OperationTypeEnum;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -10,7 +11,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
-import javax.validation.constraints.NotNull;
 import ${packageName}.service.${className}Service;
 import ${packageName}.entity.${className}Entity;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -20,6 +20,7 @@ import com.xqoo.feign.annotations.LoginUser;
 import com.xqoo.feign.annotations.OperationLog;
 
 import javax.validation.constraints.NotNull;
+import java.util.List;
 
 /**
  * ${className}Controller
@@ -72,7 +73,7 @@ public class ${className}Controller{
     @ApiOperation("批量新增数据")
     @PostMapping("/addRecordByList")
     @OperationLog(tips="批量新增${tableName}表数据", operatorType = OperationTypeEnum.ADD, isSaveRequestData = true)
-    public ResultEntity addRecordByList(@ApiIgnore @LoginUser CurrentUser currentUser,
+    public ResultEntity<String> addRecordByList(@ApiIgnore @LoginUser CurrentUser currentUser,
                                         @RequestBody List<${className}Entity> list){
         if(StringUtils.isEmpty(currentUser.getUserId())){
             return new ResultEntity<>(HttpStatus.NOT_ACCEPTABLE, "未找到当前登录人信息，请重新登录重试");
