-新增上传记录插入，增加筛选功能 -优化上传签名获取，优化回调处理逻辑

--- a/xqoo-cloud-code-generator/src/main/resources/vm/java/entity.java.vm
+++ b/xqoo-cloud-code-generator/src/main/resources/vm/java/entity.java.vm
@@ -80,8 +80,8 @@ public class ${className}Entity extends Model<${className}Entity> {
 
     @Override
     public boolean equals(Object o) {
-        if (this == o) { return true };
-        if (o == null || getClass() != o.getClass()) { return false };
+        if (this == o) { return true; }
+        if (o == null || getClass() != o.getClass()) { return false; }
         ${className}Entity that = (${className}Entity) o;
         return new EqualsBuilder()
 #set($ArrLength=$columns.size())
